# cxwidgets

./: setup.cfg  setup.py
cxwidgets/: __init__.py  auxwidgets.py  common_mixin.py  cx_checkbox.py  cx_combobox.py  cx_doublespinbox.py  cx_label.py  cx_pushbutton.py  cx_spinbox.py  cx_switch.py  cx_widgets.ui  pcheckbox.py  pcombobox.py  pdoublespinbox.py  plcdnumber.py  pledwidget.py  pspinbox.py  pswitch.py
cxwidgets/cx_pyqtgraph_items/: cx_scrollplotdataitem.py
cxwidgets/demo/: signal_plotter.py  simple_plotter.py  simple_scroll_plotter.py  test.py  test2.py
cxwidgets/dialogs/: general_cm.py  spinbox_cm.py
cxwidgets/plugins/: cx_plugin.py
