[metadata]
name = cxwidgets
version = attr: cxwidgets.__version__
author='Fedor Emanov'
License=GPL
description='PyQt widgets connected to CX v4 control system framewok with designer plugins',
classifiers=
    License :: OSI Approved :: GNU General Public License (GPL)
    Programming Language :: Python :: 3

[options]
python_requires = >=3.3
package_dir =
    = cxwidgets
packages = find:

[options.packages.find]
where=cxwidgets


[build-system]
requires = ["setuptools", "wheel"]